[project]
name = "market-core"
version = "0.1.0"
description = "Ядро для интернет-магазина"
authors = [
    {name = "Yulianna-Aleeva",email = "89673838388@mail.ru"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "coverage (>=7.15.2,<8.0.0)"
]


[tool.black]
target-version = ["py310"]
line-length = 119
exclude = ".git/|.venv"


[tool.isort]
profile = "black"
float_to_top = true
combine_as_imports = true


[tool.flake8]
max-line-length = 119
exclude = [".git", ".venv", "__pycache__", "venv", "env", ".mypy_cache", ".pytest_cache"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv"]
